# shlinkcli

./: README.md  pyproject.toml
shlinkcli/: __init__.py  __main__.py  cli.py  client.py  exception.py  shlink_api.py  urls.py
