[tool.poetry]
name = "shlinkcli"
version = "0.1.0"
description = "A CLI application for the Shlink API"
authors = ["Pawan Rai <pawanrai9999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pendulum = "^2.1.2"
typer = "^0.9.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pytest = "^7.3.1"
types-requests = "^2.31.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
